@@ -64,8 +64,9 @@ public final class GameCategory {
                     .build());
         }
 
+        group.option(LabelOption.create(Text.translatable("gui.watheextended.config.category.game.group.gamerules.label.laststand").styled(style -> style.withColor(0xAAAAAA))));
         group.option(Option.<Boolean>createBuilder()
-                .name(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.laststand"))
+                .name(Text.translatable("gui.watheextended.config.text.enabled"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.laststand.desc")))
                 .binding(ClientConfig.getBool("watheextended.lastStand.enabled", false), () -> ClientConfig.getBool("watheextended.lastStand.enabled", false), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.lastStand.enabled", value))
                 .controller(opt -> BooleanControllerBuilder.create(opt).formatValue(value -> Text.translatable(value ? "gui.watheextended.config.text.on" : "gui.watheextended.config.text.off")))
@@ -78,11 +79,40 @@ public final class GameCategory {
                 .controller(IntegerFieldControllerBuilder::create)
                 .build());
 
+        group.option(LabelOption.create(Text.translatable("gui.watheextended.config.category.client.label.instinct").styled(style -> style.withColor(0xAAAAAA))));
+        group.option(Option.<Float>createBuilder()
+                .name(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.instinctcapacity"))
+                .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.instinctcapacity.desc")))
+                .binding(100.0f, () -> ClientConfig.getFloat("watheextended.instinct.capacity", 100.0f), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.instinct.capacity", value))
+                .controller(option -> FloatSliderControllerBuilder.create(option)
+                        .range(0.0f, 100.0f)
+                        .step(1.0f)
+                        .formatValue(value -> Text.literal(String.format(java.util.Locale.ROOT, "%.0f%%", value))))
+                .build());
+        group.option(Option.<Float>createBuilder()
+                .name(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.instinctdrainrate"))
+                .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.instinctdrainrate.desc")))
+                .binding(30.0f, () -> ClientConfig.getFloat("watheextended.instinct.drainRate", 30.0f), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.instinct.drainRate", value))
+                .controller(option -> FloatSliderControllerBuilder.create(option)
+                        .range(0.0f, 100.0f)
+                        .step(1.0f)
+                        .formatValue(value -> Text.literal(String.format(java.util.Locale.ROOT, "%.0f%%", value))))
+                .build());
+        group.option(Option.<Float>createBuilder()
+                .name(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.instinctreloadrate"))
+                .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.instinctreloadrate.desc")))
+                .binding(10.0f, () -> ClientConfig.getFloat("watheextended.instinct.reloadRate", 10.0f), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.instinct.reloadRate", value))
+                .controller(option -> FloatSliderControllerBuilder.create(option)
+                        .range(0.0f, 100.0f)
+                        .step(1.0f)
+                        .formatValue(value -> Text.literal(String.format(java.util.Locale.ROOT, "%.0f%%", value))))
+                .build());
+
         if (cat.rezelyn.watheextended.api.config.kinswathe.ConfigHelper.isLoaded()) {
             final boolean startSafeTimeDefault = cat.rezelyn.watheextended.api.config.kinswathe.ConfigHelper.getEnableStartSafeTime(client);
-
+            group.option(LabelOption.create(Text.translatable("gui.watheextended.config.category.game.group.gamerules.label.safepreptime").styled(style -> style.withColor(0xAAAAAA))));
             group.option(Option.<Boolean>createBuilder()
-                    .name(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.safepreptime"))
+                    .name(Text.translatable("gui.watheextended.config.text.enabled"))
                     .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.gamerules.opt.safepreptime.desc")))
                     .binding(startSafeTimeDefault, () -> cat.rezelyn.watheextended.api.config.kinswathe.ConfigHelper.getEnableStartSafeTime(MinecraftClient.getInstance().world), value -> ScreenUtils.stage(sendCommand, parent, "kinswathe.EnableStartSafeTime", value))
                     .controller(opt -> BooleanControllerBuilder.create(opt).formatValue(value -> Text.translatable(value ? "gui.watheextended.config.text.on" : "gui.watheextended.config.text.off")))
@@ -119,14 +149,19 @@ public final class GameCategory {
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.shooterpunishment"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.shooterpunishment.desc")))
                 .binding("DEFAULT", () -> ClientConfig.getString("watheextended.shootInnocentPunishmentMode", "DEFAULT"), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.shootInnocentPunishmentMode", value))
-                .controller(option -> CyclingListControllerBuilder.create(option).values(java.util.Arrays.asList("DEFAULT", "PREVENT_PICKUP", "KILL_SHOOTER", "KILL_BOTH")).formatValue(Text::literal))
+                .controller(option -> CyclingListControllerBuilder.create(option)
+                        .values(java.util.List.of("DEFAULT", "PREVENT_PICKUP", "KILL_SHOOTER", "KILL_BOTH"))
+                        .formatValue(value -> Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.shooterpunishment." + value.toLowerCase(java.util.Locale.ROOT))))
                 .build());
 
         group.option(Option.<Integer>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.backfire"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.backfire.desc")))
                 .binding(GameComponents.getBackfire(world), () -> GameComponents.getBackfire(MinecraftClient.getInstance().world), value -> sendCommand.accept("wathe:gameSettings set backfireChancePerInnocentKill " + (value / 100f), parent))
-                .controller(IntegerFieldControllerBuilder::create)
+                .controller(option -> IntegerSliderControllerBuilder.create(option)
+                        .range(0, 100)
+                        .step(1)
+                        .formatValue(value -> Text.literal(String.format(java.util.Locale.ROOT, "%d%%", value))))
                 .build());
 
         group.option(LabelOption.create(Text.translatable("gui.watheextended.config.category.roles").styled(style -> style.withColor(0xAAAAAA))));
@@ -136,7 +171,6 @@ public final class GameCategory {
                 .binding(GameComponents.getKillerDividend(world), () -> GameComponents.getKillerDividend(MinecraftClient.getInstance().world), value -> sendCommand.accept("wathe:gameSettings set roleDividend killer " + value, parent))
                 .controller(IntegerFieldControllerBuilder::create)
                 .build());
-
         group.option(Option.<Integer>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.roledividend_vigilante"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.roledividend_vigilante.desc")))
@@ -151,7 +185,6 @@ public final class GameCategory {
                 .binding(1, ConfigHelper::getModifierMaximum, value -> ScreenUtils.stage(sendCommand, parent, "hml.modifierMaximum", value))
                 .controller(IntegerFieldControllerBuilder::create)
                 .build());
-
         group.option(Option.<Integer>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.modifiers_multiplier"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.modifiers_multiplier.desc")))
@@ -159,37 +192,31 @@ public final class GameCategory {
                 .controller(IntegerFieldControllerBuilder::create)
                 .build());
 
+        group.option(LabelOption.create(Text.translatable("gui.watheextended.config.category.game.group.gamerules.label.economy").styled(style -> style.withColor(0xAAAAAA))));
+        final boolean adjustPassiveIncomeEnabled = ClientConfig.getBool("watheextended.balance.adjustPassiveIncome", false);
         group.option(Option.<Integer>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.base_passive_income"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.base_passive_income.desc")))
-                .binding(5, () -> ClientConfig.getInt("watheextended.balance.basePassiveIncome", 5),
-                        v -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.basePassiveIncome", v))
+                .binding(5, () -> ClientConfig.getInt("watheextended.balance.basePassiveIncome", 5), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.basePassiveIncome", value))
                 .controller(IntegerFieldControllerBuilder::create)
                 .build());
-
-        final boolean adjustPassiveIncomeEnabled = ClientConfig.getBool("watheextended.balance.adjustPassiveIncome", false);
         group.option(Option.<Boolean>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.adjust_passive_income"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.adjust_passive_income.desc")))
-                .binding(false, () -> ClientConfig.getBool("watheextended.balance.adjustPassiveIncome", false),
-                        v -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.adjustPassiveIncome", v))
-                .controller(opt -> BooleanControllerBuilder.create(opt).formatValue(value -> Text.translatable(value ? "gui.watheextended.config.text.on" : "gui.watheextended.config.text.off")))
+                .binding(false, () -> ClientConfig.getBool("watheextended.balance.adjustPassiveIncome", false), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.adjustPassiveIncome", value))
+                .controller(option -> BooleanControllerBuilder.create(option).formatValue(value -> Text.translatable(value ? "gui.watheextended.config.text.on" : "gui.watheextended.config.text.off")))
                 .build());
-
         group.option(Option.<Integer>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.max_passive_income_distance"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.max_passive_income_distance.desc")))
-                .binding(10, () -> ClientConfig.getInt("watheextended.balance.maxPassiveIncomeDistance", 10),
-                        v -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.maxPassiveIncomeDistance", v))
+                .binding(10, () -> ClientConfig.getInt("watheextended.balance.maxPassiveIncomeDistance", 10), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.maxPassiveIncomeDistance", value))
                 .controller(IntegerFieldControllerBuilder::create)
                 .available(adjustPassiveIncomeEnabled)
                 .build());
-
         group.option(Option.<Integer>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.min_passive_income"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.wathe_options.opt.min_passive_income.desc")))
-                .binding(0, () -> ClientConfig.getInt("watheextended.balance.minPassiveIncome", 0),
-                        v -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.minPassiveIncome", v))
+                .binding(0, () -> ClientConfig.getInt("watheextended.balance.minPassiveIncome", 0), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.balance.minPassiveIncome", value))
                 .controller(IntegerFieldControllerBuilder::create)
                 .available(adjustPassiveIncomeEnabled)
                 .build());
@@ -243,14 +270,6 @@ public final class GameCategory {
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.extra_options.opt.increasemoneywhenkilll.desc")))
                 .binding(100, () -> cat.rezelyn.watheextended.api.config.kinswathe.ConfigHelper.getIncreaseMoneyWhenKill(MinecraftClient.getInstance().world), value -> ScreenUtils.stage(sendCommand, parent, "kinswathe.IncreaseMoneyWhenKill", value))
                 .controller(IntegerFieldControllerBuilder::create)
-                .available(watheTweaksEnabled)
-                .build());
-
-        group.option(Option.<Boolean>createBuilder()
-                .name(Text.translatable("gui.watheextended.config.category.game.group.extra_options.opt.preventkillerdroprevolver"))
-                .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.game.group.extra_options.opt.preventkillerdroprevolver.desc")))
-                .binding(false, () -> cat.rezelyn.watheextended.api.config.kinswathe.ConfigHelper.getPreventKillerDropRevolver(MinecraftClient.getInstance().world), value -> ScreenUtils.stage(sendCommand, parent, "kinswathe.PreventKillerDropRevolver", value))
-                .controller(TickBoxControllerBuilder::create)
                 .available(watheTweaksEnabled)
                 .build());
 
