@@ -7,10 +7,7 @@ import cat.rezelyn.watheextended.component.WatheExtendedWorldComponent;
 import cat.rezelyn.watheextended.client.screen.ScreenUtils;
 import cat.rezelyn.watheextended.game.TeleportationSlot;
 import dev.isxander.yacl3.api.*;
-import dev.isxander.yacl3.api.controller.BooleanControllerBuilder;
-import dev.isxander.yacl3.api.controller.CyclingListControllerBuilder;
-import dev.isxander.yacl3.api.controller.IntegerFieldControllerBuilder;
-import dev.isxander.yacl3.api.controller.StringControllerBuilder;
+import dev.isxander.yacl3.api.controller.*;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.text.Text;
@@ -90,14 +87,19 @@ public final class MapCategory {
                 .name(Text.translatable("gui.watheextended.config.category.map.opt.jumpmode"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.map.opt.jumpmode.desc")))
                 .binding("LOBBY", () -> ClientConfig.getString("watheextended.jumpMode", "LOBBY"), value -> ScreenUtils.stage(sendCommand, parent, "watheextended.jumpMode", value))
-                .controller(opt -> CyclingListControllerBuilder.create(opt).values(java.util.Arrays.asList("DEFAULT", "LOBBY", "EVERYWHERE")).formatValue(Text::literal))
+                .controller(option -> CyclingListControllerBuilder.create(option)
+                        .values(java.util.List.of("DEFAULT", "LOBBY", "EVERYWHERE"))
+                        .formatValue(value -> Text.translatable("gui.watheextended.config.category.map.opt.jumpmode." + value.toLowerCase(java.util.Locale.ROOT))))
                 .build());
         /// AUTO START
         builder.option(Option.<Integer>createBuilder()
                 .name(Text.translatable("gui.watheextended.config.category.map.opt.autostart"))
                 .description(OptionDescription.of(Text.translatable("gui.watheextended.config.category.map.opt.autostart.desc")))
                 .binding(GameComponents.getAutoStart(world), () -> GameComponents.getAutoStart(MinecraftClient.getInstance().world), value -> sendCommand.accept("wathe:gameSettings set autoStart " + value, parent))
-                .controller(IntegerFieldControllerBuilder::create)
+                .controller(option -> IntegerSliderControllerBuilder.create(option)
+                        .range(0, 60) // max 60s because who wants it to be higher?
+                        .step(1)
+                        .formatValue(value -> Text.literal(String.format(java.util.Locale.ROOT, "%ds", value))))
                 .build());
 
         // Variables
